# fastapi_boilerplate

./: .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  error_handlers.py  middlewares.py  schemas.py
app/common/: base_model.py  base_repository.py  base_service.py  db.py  filtering.py  paginator.py  rate_limiting.py  response.py  security.py
app/dependencies/: config.py  db.py
app/helpers/: email_service.py  encryption.py  error_handlers.py  response.py  uploads.py
app/modules/core/: models.py  schema.py
app/modules/core/integrity_validators/: user_integrity_validator.py
app/modules/core/models/: country.py  email_template.py  permission.py  role.py  user.py
app/modules/core/repositories/: country_repository.py  email_template_repository.py  permission_repository.py  role_repository.py  user_repository.py
app/modules/core/routers/: auth_router.py  file_router.py  params_router.py  root_router.py  user_router.py
app/modules/core/schemas/: auth_schemas.py  country_schemas.py  email_template_schemas.py  param_schemas.py  schema_validators.py  user_schemas.py  validators.py
app/modules/core/services/: auth_service.py  country_service.py  email_service.py  email_template_service.py  file_service.py  role_service.py  user_service.py
app/modules/core/templates/: confirmation_error.html  confirmation_success.html  reset_password.html
db/: db.py  env.py  script.py.mako  utils.py
db/data/: countries.csv
db/versions/: 03f38e636f9f_insert_email_templates.py  077a1b7fc10b_first_migration.py  34a1b0300fe2_insert_roles_and_permissions.py  34a1b0300fe2_insert_roles_permissions_countries.py  7981ae0fe913_first_migration.py
tests/: conftest.py
tests/integration/: test_auth.py  test_user.py
