[tool.poetry]
name = "fastapi_boilerplate"
version = "0.1.0"
description = ""
authors = ["Samuel Pedrajas <samuelpedrajaspz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0"
fastapi = "^0.104.1"
sqlmodel = "^0.0.14"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
