[tool.poetry]
name = "fastapi_boilerplate"
version = "0.1.0"
description = ""
authors = ["Samuel Pedrajas <samuelpedrajaspz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0"
fastapi = "^0.104.1"
sqlmodel = "^0.0.14"
passlib = "^1.7.4"
itsdangerous = "^2.1.2"
alembic = "^1.13.0"
pydantic-settings = "^2.1.0"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.2"}
aiosmtplib = "^3.0.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
