[tool.poetry]
name = "fastapi_boilerplate"
version = "0.1.0"
description = ""
authors = ["Samuel Pedrajas <samuelpedrajaspz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0"
fastapi = "^0.105.0"
passlib = "^1.7.4"
itsdangerous = "^2.1.2"
alembic = "^1.13.0"
pydantic-settings = "^2.1.0"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.2"}
aiosmtplib = "^3.0.1"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytest = "^7.4.4"
httpx = "^0.26.0"
pytest-env = "^1.1.3"
pytest-asyncio = "^0.23.3"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
env = [
    "FASTAPI_ENV=testing",
]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
